--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    env:
+      OPENAI_API_KEY: test      # dummy key so OpenAIEmbeddings can initialize
     steps:
       # 1) Check out your code
       - name: Checkout repository
