--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,28 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiosignal==1.3.2
-annotated-types==0.7.0
-anyio==4.9.0
-async-timeout==4.0.3
-attrs==25.3.0
-certifi==2025.4.26
-charset-normalizer==3.4.2
-dataclasses-json==0.6.7
-dateparser==1.2.1
-discord==2.3.2
-discord.py==2.5.2
-distro==1.9.0
-dotenv==0.9.9
-exceptiongroup==1.2.2
-faiss-cpu==1.11.0
-frozenlist==1.6.0
-h11==0.16.0
-httpcore==1.0.9
-httpx==0.28.1
-httpx-sse==0.4.0
-idna==3.10
-iniconfig==2.1.0
-jiter==0.9.0
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain==0.3.25
-langchain-community==0.3.23
-langchain-core==0.3.59
-langchain-openai==0.3.16
-langchain-text-splitters==0.3.8
-langsmith==0.3.42
-marshmallow==3.26.1
-multidict==6.4.3
-mypy_extensions==1.1.0
-numpy==2.0.2
-openai==1.77.0
-orjson==3.10.18
-packaging==24.2
-pluggy==1.5.0
-propcache==0.3.1
-pydantic==2.11.4
-pydantic-settings==2.9.1
-pydantic_core==2.33.2
-pytest==8.3.5
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-pytz==2025.2
-PyYAML==6.0.2
-RapidFuzz==3.13.0
-regex==2024.11.6
-requests==2.32.3
-requests-toolbelt==1.0.0
-six==1.17.0
-sniffio==1.3.1
-SQLAlchemy==2.0.40
-tenacity==9.1.2
-tiktoken==0.9.0
-tomli==2.2.1
-tqdm==4.67.1
-typing==3.7.4.3
-typing-inspect==0.9.0
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-tzlocal==5.3.1
-urllib3==2.4.0
-yarl==1.20.0
-zstandard==0.23.0
-rapidfuzz
+# Core dependencies
+streamlit>=1.32.0
+pyperclip>=1.8.2
+python-dotenv>=1.0.0
+openai>=1.12.0
+langchain>=0.1.0
+faiss-cpu>=1.7.4
+SQLAlchemy>=2.0.0
+pytz>=2024.1
+python-dateutil>=2.8.2
+rapidfuzz>=3.0.0
+
+# Monitoring and metrics
+prometheus-client>=0.19.0
+python-json-logger>=2.0.7
+
+# Testing
+pytest>=7.4.0
+pytest-cov>=4.1.0
+
+# Development
+black>=23.12.0
+flake8>=7.0.0
+mypy>=1.8.0
+isort>=5.13.0
+
+# Utilities
+tqdm>=4.66.0
