--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,13 @@ SQLAlchemy>=2.0.0
 pytz>=2024.1
 python-dateutil>=2.8.2
 rapidfuzz>=3.0.0
+dateparser>=1.2.0
+# Discord bot
+discord.py>=2.3.2
+# For timezone support (Python 3.9+ includes zoneinfo, but add backport for older)
+backports.zoneinfo; python_version<'3.9'
+# For pydantic models (used in db/models.py)
+pydantic>=1.10.0
 
 # Monitoring and metrics
 prometheus-client>=0.19.0
