Feat: modified bot.py, render.yaml and requirements.txt to introduce a web service to run in Render on 0.0.0.0 por 8080 via Flask

--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,11 @@
 services:
-  - type: worker
+  - type: web
     name: discord-bot
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: python core/bot.py
     envVars:
       - key: DISCORD_TOKEN
-        sync: false 
+        sync: false
+    healthCheckPath: /health
+    port: 8080 
