--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,8 @@ discord.py>=2.3.2
 backports.zoneinfo; python_version<'3.9'
 # For pydantic models (used in db/models.py)
 pydantic>=1.10.0
+# Web server
+flask>=3.0.0
 
 # Monitoring and metrics
 prometheus-client>=0.19.0
