--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ python-dotenv>=1.0.0
 openai>=1.12.0
 langchain>=0.1.0
 langchain_community>=0.0.30
+langchain-openai>=0.0.5
 faiss-cpu>=1.7.4
 SQLAlchemy>=2.0.0
 pytz>=2024.1
