🚀 Major Architecture Upgrade: Discord RAG Bot v2.0 - Agentic Multi-Agent System
✨ COMPLETE SYSTEM TRANSFORMATION
- Upgraded from simple LangChain RAG to sophisticated multi-agent architecture
- Implemented LangGraph-powered orchestrator with specialized agents
- Added production-ready conversation memory, caching, and vector storage

🤖 NEW AGENTIC FRAMEWORK
- Planning Agent: Query analysis and task decomposition
- Search Agent: Vector similarity search and message retrieval
- Analysis Agent: Content analysis and response synthesis
- Orchestrator: LangGraph workflow coordination

💾 ADVANCED DATA MANAGEMENT
- ChromaDB persistent vector store with OpenAI embeddings
- SQLite conversation memory with user context tracking
- Smart multi-level caching system (memory + file)
- Async I/O operations throughout

🔧 PRODUCTION FEATURES
- Discord interface with slash commands and error handling
- RESTful Agent API for external integrations
- Streamlit web interface for administration
- Comprehensive test suite (100% pass rate)
- Pre-deployment validation scripts

📁 PROJECT ORGANIZATION
- Clean root directory with essential files only
- Organized scripts/ and docs/ directories
- Updated documentation with deployment guides
- Legacy code archived in .backup/ directory

🗑️ LEGACY CLEANUP
- Removed old core/, db/, tools/, utils/ directories
- Cleaned up legacy configuration files (.flake8, mkdocs.yml, render.yaml)
- Migrated useful documentation to organized structure
- Maintained full backup of previous system

🧪 TESTING & VALIDATION
- 8/8 comprehensive system tests passing
- End-to-end workflow validation
- Import, memory, cache, API, Discord interface tests
- Deployment readiness validation script

📋 DEPLOYMENT READY
- Single entry point: main.py
- Environment variable configuration
- Docker support via launch.sh
- Complete documentation and guides

BREAKING CHANGES:
- Complete API restructure from old core/ system
- New agentic/ module structure
- Updated configuration format
- N

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,43 @@
+# Python
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+.Python
+
+# Environment variables
 .env
-Leeme_JC.txt
+.env.local
+.env.production
+
+# Agentic framework data
+data/conversation_memory.db
+data/cache/
+data/vectorstore/
+*.db
+*.log
+
+# Backup and legacy files
+.backup/
+docs/legacy/
+data/legacy/
+
+# Virtual environment
 venv/
+env/
+
+# Development and testing
+.pytest_cache/
+test_results.txt
+query_test_results.json
+.coverage
+
+# IDE and OS files
 .DS_Store
-jc_logs/
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Deployment
+.render/
