--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,9 @@ __pycache__/
 data/conversation_memory.db
 data/cache/
 data/vectorstore/
+data/chromadb/
 *.db
+*.sqlite3
 *.log
 
 # Backup and legacy files
