--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ flask>=3.0.0
 # Monitoring and metrics
 prometheus-client>=0.19.0
 python-json-logger>=2.0.7
+psutil>=5.9.0
 
 # Testing
 pytest>=7.4.0
