🛡️ Add comprehensive snapshot and restoration system
- Add create_snapshot.py: Creates git branches + file system backups
- Add restore_snapshot.py: Interactive restoration from snapshots
- Update .gitignore: Properly handle .snapshots/ directory
- Complete safety net before architectural migration

Features:
- Git branch snapshots with detailed commit messages
- Compressed file system archives (complete, data-only, core-only)
- Individual config file backups
- Interactive restoration interface
- Comprehensive restoration guide generation
- Manifest tracking for all snapshots

Ready for safe architectural cleanup and migration.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,11 @@ data/debug_*/
 docs/legacy/
 data/legacy/
 
+# Snapshots (migration safety backups)
+.snapshots/
+*.tar.gz
+*.backup
+
 # Virtual environment
 venv/
 env/
