Enhanced FAISS index implementation with Discord-specific metadata
- Fixed KeyError in build_enhanced_faiss_index.py by adding missing 'faiss_index' field
- Updated config.py to use all-MiniLM-L6-v2 embedding model (384 dimensions)
- Enhanced tools.py with automatic enhanced FAISS index loading and fallback
- Added comprehensive scripts for content analysis and enhanced indexing
- Added content analysis documentation
- Organized data directories and updated .gitignore
- Successfully integrated enhanced FAISS with existing search functionality

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,23 @@ jc_logs/.DS_Store
 
 # FAISS index backups (keep current but ignore old backups)
 index_faiss_backup_*/
+
+# Data directories
+data/indices/
+data/reports/
+data/tests/
+
+# Enhanced FAISS indices (timestamped)
+enhanced_faiss_*.index
+enhanced_faiss_*_metadata.json
+enhanced_faiss_build_report_*.json
+
+# Content analysis reports
+content_preprocessing_analysis_*.json
+*_report_*.json
+
+# Temporary test files
+test_*.py
+
+# Discord database files
+*.db
