Remove stranded empty discord_bot.db file and update .gitignore
- Removed empty discord_bot.db file from root directory (0 bytes)
- Updated .gitignore to be more specific about database file exclusions
- Main database data/discord_messages.db remains intact with all data

--- a/.gitignore
+++ b/.gitignore
@@ -63,5 +63,7 @@ content_preprocessing_analysis_*.json
 # Temporary test files
 test_*.py
 
-# Discord database files
-*.db
+# Discord database files (but keep the main data directory)
+discord_bot.db
+*.db.backup
+*.sqlite.backup
