🎯 Major System Improvements: Enhanced Summarization & Root Cleanup
✅ **Summarization System Fixes & Enhancements**
- Fixed 'str' object has no attribute 'get' errors with defensive coding
- Enhanced prompts for professional community activity analysis
- Improved content preprocessing with intelligent limiting
- Added robust author field handling for all data types
- Quality upgrade: message lists → professional trend analysis

✅ **App System Improvements**
- Enhanced Streamlit app with Discord-style UI theming
- Comprehensive search interface with advanced options
- Added analytics dashboard and query examples
- Improved error handling and user experience
- Fixed import issues and module path resolution

✅ **Root Folder Organization**
- Moved utility scripts to scripts/ folder (search_logs.py, run_tests.py)
- Moved documentation to docs/ folder (LOGGING_GUIDE.md)
- Updated .gitignore with comprehensive exclusions
- Removed Python cache files and temporary artifacts
- Clean, professional project structure

✅ **Code Quality & Robustness**
- Added defensive programming patterns throughout
- Enhanced error handling and logging
- Improved type safety and validation
- Better separation of concerns and modularity

🎯 **Result**: Discord bot now provides high-quality community insights with professional UI and robust error handling

--- a/.gitignore
+++ b/.gitignore
@@ -29,11 +29,15 @@ Thumbs.db
 # Logs
 *.log
 logs/*.log
+logs/bot_*.log
+logs/simple_logs/
+logs/query_logs/
 
 # Temporary files
 *.tmp
 *.bak
 *.orig
+*.temp
 
 # Project specific
 Leeme_JC.txt
@@ -67,3 +71,6 @@ test_*.py
 discord_bot.db
 *.db.backup
 *.sqlite.backup
+
+# Jupyter notebook checkpoints
+.ipynb_checkpoints/
