--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ faiss-cpu>=1.7.4
 # Database and ORM
 SQLAlchemy>=2.0.0
 alembic>=1.12.0
+aiosqlite>=0.19.0
 
 # Time and Date Processing
 pytz>=2024.1
