🔒 SECURITY: Add fetched_messages to gitignore and cleanup redundant backups
- Added data/fetched_messages/ to .gitignore to prevent message records from being tracked
- Deleted redundant backup folder (3.3MB of duplicate data)
- Ensures no Discord message content can be accidentally pushed to remote
- Maintains clean repository with proper data protection

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ data/conversation_memory.db
 data/cache/
 data/vectorstore/
 data/chromadb/
+data/fetched_messages/
 data/test_*/
 data/debug_*/
 *.db
