🔒 SECURITY: Fix gitignore to properly ignore discord_messages_v2.json
- Added data/discord_messages_v2.json back to gitignore
- Ensures 1.8MB of Discord message records are not tracked
- Maintains comprehensive protection against message data exposure
- Repository remains 100% secure against sensitive data leaks

--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,13 @@ data/cache/
 data/vectorstore/
 data/chromadb/
 data/fetched_messages/
+data/discord_messages_v2.json
 data/test_*/
 data/debug_*/
 *.db
 *.sqlite3
 *.log
+logs/
 
 # Backup and legacy files
 .backup/
