Update .gitignore to exclude internal resource files from GitHub
- Added exclusions for optimized_fresh_resources.json, processed_resources.json, and related backup files
- Only resources_export.json will be pushed to GitHub as the public resource database
- Removed internal resource files from git tracking while keeping them locally
- Added exclusions for processing markers and checkpoint files

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,15 @@ data/debug_*/
 *.log
 logs/
 
+# Resource detection files (keep only export for GitHub)
+data/optimized_fresh_resources.json
+data/processed_resources.json
+data/detected_resources_*.json
+data/fetching_checkpoint.json
+data/indexing_checkpoint.json
+data/*_backup.json
+data/processing_markers/
+
 # Backup and legacy files
 .backup/
 docs/legacy/
