--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,11 @@ chromadb = "0.4.15"
 faiss-cpu = "^1.7.4"
 sentence-transformers = "^2.2.2"
 
+# Machine Learning and Analytics
+scikit-learn = "^1.5.0"
+numpy = "^1.24.0"
+networkx = "^3.0"
+
 # Database and ORM
 SQLAlchemy = "^2.0.0"
 alembic = "^1.12.0"
