Remove Streamlit interface completely from codebase\n\n- Deleted all Streamlit interface files:\n  - agentic/interfaces/streamlit_interface.py\n  - scripts/streamlit_app.py\n  - scripts/streamlit_simple.py\n  - scripts/launch_streamlit.sh\n\n- Removed Streamlit references from:\n  - agentic/interfaces/__init__.py (removed import and export)\n  - agentic/interfaces/discord_interface.py (removed import)\n  - agentic/config/modernized_config.py (removed streamlit_enabled and streamlit_port)\n  - agentic/analytics/analytics_dashboard.py (updated comments)\n  - agentic/analytics/query_answer_repository.py (updated comments and schema)\n  - pyproject.toml (removed streamlit dependency and mypy override)\n  - docs/AGENTIC_ARCHITECTURE.md (removed from diagrams and interface section)\n  - docs/PROJECT_STRUCTURE.md (removed from interface description)\n  - docs/setup/DEPLOYMENT.md (removed from interface list)\n\n- Updated all documentation to reflect Discord-only interface architecture\n- Removed streamlit dependency from project dependencies\n- Cleaned up all cross-platform references to focus on Discord interface\n\nThe codebase is now streamlined and focused on Discord bot functionality only.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,11 @@ packages = [{include = "agentic"}]
 python = "^3.11"
 
 # Core dependencies
-streamlit = "^1.32.0"
 pyperclip = "^1.8.2"
 python-dotenv = "^1.0.0"
 openai = "^1.12.0"
 
-# Streamlit extensions and visualization
+# Visualization and data processing
 plotly = "^5.17.0"
 pandas = "^2.0.0"
 aiofiles = "^23.2.0"
@@ -131,8 +130,7 @@ module = [
     "chromadb.*",
     "langchain.*",
     "langgraph.*",
-    "discord.*",
-    "streamlit.*"
+    "discord.*"
 ]
 ignore_missing_imports = true
 
