--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,10 +25,8 @@ langchain-core = "^0.2.0"
 langchain-openai = "^0.1.0"
 langchain-community = "^0.2.0"
 
-# Vector Store and Embeddings
-chromadb = "0.4.15"
-faiss-cpu = "^1.7.4"
-sentence-transformers = "^2.2.2"
+# MCP Server (replaces vector store and embeddings)
+# No additional dependencies needed - uses SQLite and local LLM
 
 # Machine Learning and Analytics
 scikit-learn = "^1.5.0"
