--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,15 @@ readme = "readme.md"
 packages = [{include = "agentic"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.12"
 
 # Core dependencies
 pyperclip = "^1.8.2"
 python-dotenv = "^1.0.0"
 openai = "^1.12.0"
+
+# MCP Framework
+mcp-sqlite = "^0.1.0"
 
 # Visualization and data processing
 plotly = "^5.17.0"
@@ -36,7 +39,7 @@ networkx = "^3.0"
 # Database and ORM
 SQLAlchemy = "^2.0.0"
 alembic = "^1.12.0"
-aiosqlite = "^0.19.0"
+aiosqlite = "^0.21.0"
 
 # Time and Date Processing
 pytz = "^2024.1"
@@ -52,7 +55,7 @@ redis = "^5.0.0"
 "discord.py" = "^2.3.2"
 
 # For pydantic models
-pydantic = "^1.10.0"
+pydantic = "^2.11.5"
 
 # Web server
 flask = "^3.0.0"
